# picogbox

./: CMakeLists.txt  README.md
src/: bin_cdc_binary.c  bin_cdc_binary.h  bin_cdc_bridge_uart.c  bin_cdc_bridge_uart.h  bin_cdc_capture.c  bin_cdc_capture.h  bin_cdc_microshell.c  bin_cdc_microshell.h  bin_cdc_sigrock.c  bin_cdc_sigrock.h  bin_cdc_sump.c  bin_cdc_sump.h  bin_vendor_swd.c  bin_vendor_swd.h  config.h  gcc.h  log.c  log.h  managed_uart.c  managed_uart.h  manager.c  manager.h  pico_led.c  pico_led.h  pico_power.c  pico_power.h  pico_serialid.c  pico_serialid.h  picogbox.c  picogbox.h  tusb_config.c  tusb_config.h  tusb_descriptors.c  types.h  utils.c
src/microshell/: CMakeLists.txt
src/microshell/config/: ush_config_platform.h
src/microshell/config/pico/: ush_config.h
src/microshell/inc/: ush_const.h
src/microshell/src/: ush_reset.c
src/microshell/src/commands/: ush_cmd_xxd.c
